salesforce-migration/force-app/main/default/objects/Bouquet_Capacity__c/Bouquet_Capacity__c.object-meta.xml
<CustomObject>
    <label>Bouquet Capacity</label>
    <pluralLabel>Bouquet Capacities</pluralLabel>
    <nameField>
        <label>Capacity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>