salesforce-migration/force-app/main/default/objects/Bouquet_Capacity__c/fields/Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>Available_Hours__c</fullName>
    <label>Available Hours</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>