salesforce-migration/force-app/main/default/objects/Bouquet_Capacity__c/fields/Is_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Overridden__c</fullName>
    <label>Is Overridden</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>