salesforce-migration/force-app/main/default/objects/Bouquet_Capacity__c/fields/Maximum_Hours__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hours__c</fullName>
    <label>Maximum Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>8.0</defaultValue>
</CustomField>