salesforce-migration/force-app/main/default/objects/Bouquet_Capacity__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Maintenance</fullName><default>false</default></value>
            <value><fullName>Staff_Shortage</fullName><default>false</default></value>
            <value><fullName>Overtime</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>